--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                     <h4 data-aos="fade-right" data-aos-duration="2000">UI Projects</h4>
                     <h3 class="projects-subtitle2" data-aos="fade-left" data-aos-duration="2000">Classic Designs</h3>
                     <p class="projects-paragraph2" data-aos="fade-up" data-aos-duration="2000">A solid knowledge base is always needed for versatility when learning new technologies as a software developer, all of the following projects have been made using purely HTML & CSS and Javascript. Here you'll find various designs from a commerce checkout to an interactive Wordle clone or a fully functional calculator.</br></br>    
-                    You can try my designs yourself here: 👉<a href="https://calculator998.vercel.app/">Calculator</a>👈👉<a href="https://wordle546.vercel.app/">Wordle</a>👈
+                    You can try my designs yourself here: 👉<a href="https://calculator998.vercel.app/">Calculator</a>👈👉<a href="https://wordle546.vercel.app/">Wordle</a>👈👉<a href="https://quiz-project-smoky.vercel.app">Philosophy Quiz</a>👈
                     </p>
                     <h4 data-aos="fade-left" data-aos-duration="2000">Technologies used:</h4>
                     <h5 data-aos="fade-right" data-aos-duration="2000">HTML • CSS • Javascript</h5>
@@ -138,7 +138,7 @@
     <footer>
         <section>
             <div class="bg3 border">
-                <h2>Emir Colombo • Software Developer</h2>
+                <h3>Emir Colombo • Software Developer</h3>
                 <div class="footer-container">
                     <a href="https://ar.linkedin.com/in/emir-christian-c-6733091b8"><img src="./Images/linkedin.svg" width="40px" height="40px" class="logos2"></a>
                     <a href="#header"><img src="./Images/house-solid.svg" width="40px" height="40px" class="logos2"></a>
